--- a/Makefile.nvidia-pgi
+++ b/Makefile.nvidia-pgi
@@ -5,14 +5,15 @@ SHELL = /bin/sh
 
 # System-specific settings
 
-CC =		pgc++
-CCFLAGS =	-g -acc -ta=nvidia --restrict -O3 -Minfo=accel -DMPICH_IGNORE_CXX_SEEK
+CC =		pgcc
+CCFLAGS =	-acc -ta=nvidia -O3 -Minfo=accel
+#CCFLAGS =	-g -acc -ta=nvidia -Minfo=accel
 CCFLAGS +=      -DUSELAYOUTLEFT
 CCFLAGS +=  -I/usr/lib/openmpi/include
 #The Energy calculation crashes currently with both PGI 13.9 and PGI 13.10
 #The compiler reports that it generated a reduction
 #CCFLAGS += -DENABLE_EV_CALCULATION
-LINK =		pgc++
+LINK =		pgcc
 LINKFLAGS =	-g -acc -ta=nvidia -O3
 USRLIB = 	-lrt -lmpi_cxx -lmpi -lnuma
 SYSLIB =	-L/usr/lib/openmpi/lib -L/usr/lib/x86_64-linux-gnu
@@ -59,8 +60,8 @@ $(EXE):	$(OBJ)
 
 # Compilation rules
 
-.cpp.o:
-	$(CC) $(CCFLAGS) -c $*.cpp -o $*.o
+.c.o:
+	$(CC) $(CCFLAGS) -c $*.c -o $*.o
 
 # Individual dependencies
 
